2.0.14

2.0.13
Allow absolute GenericImageName in config (no reference to host OS)
Application errors in are thrown as errors in ClientContext (Run-TestsInBcContainer) (thanks @hemisphera)
Add support for remote SQL Servers in Remove-BcDatabase and Restore-BcDatabaseFromArtifacts (thanks Remko and Theo)
Issue #1941 XML validation error leads to warnings instead of errors in Compile-AppInBcContainer
Update generic tag list in Get-BestGenericImageName
Default to build 19041 if 19043 doesn't exist (as 19041 is found to work better with 21H1)
Issue #1944 Extract-AppFileToFolder doesn't handle special characters in manifest correctly
Issue #1933 Run-ALValidation fails sometimes with single installApps and multiple apps specified
Issue #1931 Throw understandable error when trying to create a pre-15 filesonly container
Issue #1921 Add /GenerateCrossReferences switch from alc.exe to Compile-AppInBcContainer and Run-AlPipeline
Issue #1826 Add additional error info to UploadImportAndApply-ConfigPackageInBcContainer
Add role permissions API.ReadWrite.All and Automation.ReadWrite.All to AAD apps when using Create-AzureAdAppsForBC
Remove-BcDatabase fails if no database exists

2.0.12
Issue #1894 Error when creating a new "clean" v18 container
Issue #1900 Code signing (Sign-NavContainerApp) does not work with a SAS URL
Issue #1906 Run-AlPipeline / Compile-AppInBcContainer problem
Unable to install Test Runner in 18.0 online tenant
Issue #1928 latest version of Docker throws an exception when using Docker Build in PowerShell (even though nothing is wrong...!!!)
Add Windows 10 21H1 known version number
Add additional countries to w1 mapping in configuration

2.0.11
Add parameter reUseContainer to Run-AlPipeline to use existing container for the pipeline
Include Tests-Marketing when installing test apps
Add parameter SharedFolder to Run-AlPipeline to share a folder from the host to the container
Allow to Run-AlPipeline without source and only installApps and/or installTestApps